ok cool fuck off

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="We're getting ready! Hold on tight."
     />
-    <title>RavenGuard</title>
+    <title>SoupGG - Website</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
